# c-crud

./: CMakeLists.txt  main.c
class/: class.h
discipline/: discipline.c  discipline.h
helpers/: helpers.c  helpers.h
professor/: professor.c  professor.h
student/: student.c  student.h
